--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -32,29 +32,17 @@ body {
 }
 
 /* Header styles */
-header #background{
-	width:100%;
-	margin:10;
-	float:left;
-	background-color:#FFF;
-	padding:10px 0px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
-}
 header #logo {
 	background-color:#2467b8;
-	padding: 20px 2px 20px 200px;
+	padding: 20px;
+	padding-left: 20%;
 }
-header #logo a {
-	font-style: italic;
-	font-weight: bold;
-	font-size: 36px;
-	font-family:sans-serif;
-	color:#FFF;
-	text-decoration:none;
-}
-
 #navwrapper {
 	text-align: center;
+	width:100%;
+	float:left;
+	background-color:#FFF;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
 }
 header #navButton {
 	float: none;
@@ -72,19 +60,17 @@ header #navButton:hover {
 	position: relative;
 	display: inline-block;
 	float: none;
+	padding: 10px 0px;
 }
 .dropdown:hover .dropdown-content {
 	display:block;
-}
-.dropdown a {
-    padding: 16px;
+	margin: 10px 0px;
 }
 
 .dropdown-content {
 	display:none;
 	position:absolute;
-	float:right;
-    min-width: 150px;
+    width: 150px;
 	background-color:#FFF;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
     z-index: 1;
@@ -114,19 +100,13 @@ header #navButton:hover {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
 	float:right;
 }
-
-
-#sidebar {
-	float:left;
-	height:100%;
-	width:10%;
-}
 #SideMenuBar {
 	float:left;
 	height:100%;
 	width:25%;	
-	margin-left:0%;
+	min-width:300px;
 	background-color:#fff;
+	margin-right: 20px;
 	
 }
 
