Changes to About Us pages
Changed image sizes, used java script to hide text in; Life Members Page
and Special Guest Page. To make it look neater and easier to read

--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -154,3 +154,59 @@ footer h2 {
 #sponsors {
 	float:left;
 }
+
+#ContentText #SpMarkShiell {
+	clear: both;
+}
+#ContentText #SpAdamLopez {
+	clear: both;
+}
+#ContentText #SpDomenicoT {
+	clear: both;
+}
+#ContentText #SpDavidH {
+	clear: both;
+}
+#ContentText #SpRaymondY {
+	clear: both;
+}
+#SpJenniferB {
+	clear: both;
+}
+#SpLeahL {
+	clear: both;
+}
+#SpRichardM {
+	clear: both;
+}
+#SpMarioD {
+	clear: both;
+}
+#SpBronwynD {
+	clear: both;
+}
+#ContentText #SpYoshikaM {
+	clear: both;
+}
+#ContentText #LmJacintaP {
+	clear: both;
+}
+#ContentText #LmStephenF {
+	clear: both;
+
+}
+#ContentText #LmJennyC {
+	clear: both;
+}
+#ContentText #LmCarolD {
+	clear: both;
+}
+#ContentText #LmDonnaM {
+	clear: both;
+}
+#ContentText #LmDavidP {
+	clear: both;
+}
+#ContentText #LmAlenN {
+	clear: both;
+}
