--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -128,6 +128,11 @@ header #navButton:hover {
 	height: 100%;
 }
 
+h1 a {
+	color: #000;
+	text-decoration: none;
+}
+
 /* footer styles */
 #footerBkg {
 	background-color:#013e9a;
