--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -92,7 +92,8 @@ header #navButton:hover {
 	min-height: 700px;
 }
 #maincontent h1 {
-	font-size: 30px;
+	font-size: 50px;
+	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;	
 }
 #maincontent img {
 	max-width:100%;
@@ -102,6 +103,7 @@ header #navButton:hover {
 #ContentText {
 	margin-left: 30%;
 	padding-left: 10px;
+	font-size:large;
 }
 #SideMenuBar {
 	float: left;
@@ -109,7 +111,7 @@ header #navButton:hover {
 	height: 100%;
 }
 
-h1 a {
+h2 a {
 	color: #000;
 	text-decoration: none;
 	
@@ -145,6 +147,8 @@ footer h2 {
 #ContentText #paraClear {
 	clear: right;
 }
+
+
 
 /* media query */
 @media only screen and (min-width: 450px) 
