--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -93,8 +93,19 @@ header #navButton:hover {
 }
 #maincontent h1 {
 	font-size: 50px;
-	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;	
+	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
 }
+
+a:link { text-decoration: none; 
+}
+a:hover { color: #50baa6;
+          text-decoration: none;
+} 
+a:active {
+	color: aqua; 
+}
+
+
 #maincontent img {
 	max-width:100%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
